--- a/public/style.css
+++ b/public/style.css
@@ -44,9 +44,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://i.ibb.co/L5Y2HqC/3818a075f69a30912822ea99c18151da.jpg'), url('https://i.ibb.co/Rp9g8x0/a86b5b025c8f809d9878705fa7a2fff4.jpg');
-  background-blend-mode: overlay;
-  opacity: 0.5;
+  background: rgba(0, 0, 0, 0.2);
   animation: moveBackground 10s infinite linear;
   z-index: 1;
 }
